# dotfiles

./: .gitignore  .ideavimrc  ComicCode.zip.gpg  init.lua  kanata.kbd  requirements.txt
aerospace/: .aerospace.toml
alacritty/.config/alacritty/: alacritty.toml
alacritty/.config/fontconfig/: fonts.conf
bare-nvim/.config/nvim/: init.lua
clangd/.config/clangd/: config.yaml
ctags-ls/: README.md  justfile  pyproject.toml
ctags-ls/src/ctags_ls/: __init__.py  tags.py
ctags-ls/tests/: test_Tags_parsing.py
foot/.config/foot/: foot.ini
hyprland/.config/hypr/: hyprland.conf  hyprland.lua
i3-macbook/.config/i3/: config
i3-macbook/.config/i3status/: config
i3/.config/i3/: choose-monitor.sh  config  justfile
i3/.config/picom/: picom.conf
ideavim/: .ideavimrc
kanata/.config/kanata/: kanata.kbd
karabiner-ts-config/: package-lock.json
karabiner-ts-config/src/: index.ts
karabiner/.config/karabiner/: karabiner.json
mpv/.config/mpv/: mpv.conf
nixos/: README  configuration.nix  rebuild.sh
nvim/.config/nvim/: init.lua
picom/.config/: picom.conf
plugin/: packer_compiled.lua
raymenu/: README.md  go.mod  go.sum  main.go
raymenu/gomono-font/: README.md
raymenu/picker/: picker.go
sesh/: go.mod  go.sum  main.go
sesh/cli/: main.go
snippets/: go.snippets  javascript.snippets  lua.snippets  python.snippets  sh.snippets  typescriptreact.snippets  yaml.snippets
st-0.9.2/: README  config.def.h  config.h
tmux/: .tmux.conf  choose-session.sh
tmux/tmux/: .gitignore  edit-sessions.sh
vim/: .vimrc
xprofile/: .xprofile
(+33 files in other folders)
