[project]
name = "ctags-ls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pygls>=2.1.1",
]

[project.scripts]
ctags-ls = "ctags_ls:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
